--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+<!--    -->
+    <color name="text_back_button">#80FFFFFF</color>
+    <color name="text_description">#BFFFFFFF</color>
+    <color name="background">#191926</color>
+    <color name="text_primary">#ECECEC</color>
+    <color name="text_secondary">#D8D8D8</color>
+    <color name="text_pink">#FF3466</color>
+    <color name="text_grey">#6D6D80</color>
 </resources>
