--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,10 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="small_text">12sp</dimen>
+    <dimen name="normal_text">14sp</dimen>
+    <dimen name="great_text">40sp</dimen>
+    <dimen name="standart_margin">16dp</dimen>
+    <dimen name="half_standart_margin">8dp</dimen>
+    <dimen name="image_size_actor">80dp</dimen>
+    <dimen name="image_text_margin">6dp</dimen>
 </resources>
